<resources>
    <string name="app_name">Baqlajon</string>
    <string name="home">Home</string>
    <string name="my_courses">My courses</string>
    <string name="balance">Balance</string>
    <string name="profile">Profile</string>
    <string name="video_player">Video lesson</string>
    <string name="night_mode">Tungi rejim</string>
    <string name="classic">Klassik</string>

    <string name="details">Properties</string>
    <string name="share_video">Share</string>
    <string name="delete_from_device">Delete from Device</string>


    <string name="skip">Skip</string>
    <string name="find_your_favorite_course">Find your favorite course</string>
    <string name="learn_with_fun">Learn with fun</string>
    <string name="get_good_results">Get good results</string>
    <string name="sub_label">Our new videos make it easy for you to learn anywhere, there are new videos that will be ready to help you</string>
    <string name="more_option">More option</string>

    <string name="login">Login</string>
    <string name="send_code">Send Code</string>
    <string name="sign_up">Sign Up</string>

    <string name="password_rule">Parol kamida 8 ta belgidan iborat bo\'lishi va maxsus belgi yoki raqamni o\'z ichiga olishi kerak</string>

    <string name="phone_number">Phone number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="do_not_have_acc">Don’t have an account?</string>
    <string name="already_have_acc">Already have an account?</string>

    <string name="full_name">Full name<font color="#F52725">*</font></string>
    <string name="phone_number_with_star">Phone number<font color="#F52725">*</font></string>
    <string name="referral_code">Referral code</string>
    <string name="share_referral_code">Share referral code</string>


    <!--    <string name="delete_from_device">Delete from Device</string>-->
    <!--    <string name="share_video">Share</string>-->
    <!--    <string name="details">Properties</string>-->
    <string name="file_provider">com.lasuak.kvplayer.fileprovider</string>
    <!--    <string name="more_option">More option</string>-->
    <string name="location">Location</string>
    <string name="file_name">File Name</string>
    <string name="length">Length</string>
    <string name="resolution">Resolution</string>
    <string name="format">Format</string>
    <string name="size">Size</string>
    <!--    <string name="ok">OK</string>-->
    <string name="next">Next</string>
    <string name="forward_10sec">forward 10sec</string>
    <string name="play">Play</string>
    <string name="backward_10sec">backward 10sec</string>
    <string name="previous">Previous</string>
    <string name="back">Back</string>
    <string name="screen_rotation">Screen rotation</string>
    <string name="full_screen">Full screen</string>
    <string name="audio_track">Audio track</string>
    <string name="mute">Mute</string>
    <string name="sub_title">Subtitle</string>
    <string name="lock">Lock</string>
    <string name="delete_video_title">Delete video</string>
    <string name="delete_video_msg">Delete this video ?</string>
    <string name="delete">Delete</string>
    <string name="Cancel">Cancel</string>
    <string name="sharing_file">Sharing %s</string>
    <string name="date">Date</string>
    <string name="total_videos">%s videos</string>
    <string name="subtitle_on">Subtitle turned on</string>
    <string name="subtitle_off">Subtitle turned off</string>
    <string name="no_recently_video_found">No recently played video found</string>
    <!--    <string name="search">Search</string>-->
    <string name="search_video">Search video</string>
    <string name="select_language">Select Language</string>
    <string name="default_language">Default</string>
    <string name="select_subtitle">Select subtitle</string>
    <string name="off_subtitle">Off</string>
    <string name="item_selected">%s selected</string>
    <!--    mustafo    -->

    <string name="confirm">Confirm</string>
    <string name="lastName">Last name</string>
    <string name="name">Firs name</string>
    <string name="search">Search</string>
    <string name="start_course">Start Course</string>
    <string name="mark_as_completed">Mark as completed</string>
    <string name="write_a_review">Write a review</string>
    <string name="enter_new_phone">Enter new phone number</string>
    <string name="new_phone">Please, enter your new phone number</string>
    <string name="new_password_txt">Please, enter your new password below</string>
    <string name="old_password">Enter old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="continue_txt">Continue</string>
    <string name="write_here">Write here</string>
    <string name="send">Send</string>
    <string name="payment">Payment</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="region">
        <item>Andijon</item>
        <item>Buxoro</item>
        <item>Fargʻona</item>
        <item>Jizzax</item>
        <item>Xorazm</item>
        <item>Namangan</item>
        <item>Navoiy</item>
        <item>Qashqadaryo</item>
        <item>Qoraqalpogʻiston Respublikasi</item>
        <item>Samarqand</item>
        <item>Sirdaryo</item>
        <item>Surxondaryo</item>
        <item>Toshkent</item>
    </string-array>

    <!--    mustafo    -->


    <!--    suhrob    -->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="new_phone_number">Telefon raqamni yangilash</string>
    <string name="please_enter_code">Please, enter the code we sent \n%1$s</string>
    <string name="time_00_23">Time: %1$s</string>
    <string name="time_sms">Vaqt: %1$s</string>
    <string name="videos">%1$s Videos</string>
    <string name="time_course">7h 30min</string>
    <string name="reviews">%1$s reviews</string>
    <string name="students_learnt">%1$s Students learnt</string>
    <string name="very_bad">Very Bad</string>
    <string name="bad">Bad</string>
    <string name="ok">OK</string>
    <string name="good">Good</string>
    <string name="great">Great!</string>
    <string name="coins">%1$s coins</string>
    <string name="congratulations">Congratulations!</string>
    <string name="congratulations_text">Your request has been received and we will contact you soon!</string>
    <string name="error">Oops!</string>
    <string name="error_text">Sorry you don\'t have enough coins! Collect more coins.</string>
    <string name="not_enough_coins">Yetarli mablag\' mavjud emas</string>
    <string name="dark_mode">Dark mode</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="english">English</string>
    <string name="language">Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    suhrob    -->

</resources>