<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fragment_background"
        android:orientation="vertical"
        android:padding="24dp"
        tools:context=".presentation.ui.start.auth.login.LoginFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium_500"
            android:text="Welcome\nBack!"
            android:textColor="@color/black1"
            android:textSize="28sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            app:cardBackgroundColor="@color/grey7"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="16dp"
                    android:src="@drawable/flag" />

                <com.santalu.maskedittext.MaskEditText
                    android:id="@+id/phoneNumber"
                    style="@style/toolbar_text_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/regular_400"
                    android:gravity="center_vertical"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:textColorHint="@color/grey2"
                    android:textSize="16sp"
                    app:met_mask="+998 ## ### ## ##" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </com.google.android.material.card.MaterialCardView>
        <!--        <include-->
        <!--            android:id="@+id/phoneNumber"-->
        <!--            layout="@layout/input_card"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="46dp"-->
        <!--            app:name="@{@string/phone_number}" />-->

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/grey7"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/grey2">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/grey7"
                        android:fontFamily="@font/regular_400"
                        android:gravity="center_vertical"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="12dp"
                        android:textColor="@color/black1"
                        android:textColorHint="@color/grey2" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/medium_500"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:textSize="14sp" />

        <include
            android:id="@+id/login"
            layout="@layout/main_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:name="@{@string/login}" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium_500"
                android:text="@string/do_not_have_acc"
                android:textColor="@color/black3"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/medium_500"
                android:text="@string/sign_up"
                android:textColor="@color/blue"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</layout>