<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="24dp"
        tools:context=".presentation.ui.start.auth.forgot_password.ResetFragment">

        <TextView
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_500"
            android:gravity="center"
            android:lineHeight="21dp"
            android:text="Enter a new password!"
            android:textColor="@color/grey1"
            android:textSize="14sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="78dp"
            app:cardBackgroundColor="@color/grey7"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/grey2">

                    <EditText
                        android:id="@+id/new_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/grey7"
                        android:fontFamily="@font/poppins_500"
                        android:gravity="center_vertical"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:lineHeight="24dp"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="12dp"
                        android:textColor="@color/black1"
                        android:textColorHint="@color/grey2"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/grey7"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeWidth="0dp"
                    app:boxStrokeWidthFocused="0dp"
                    app:hintAnimationEnabled="false"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/grey2">

                    <EditText
                        android:id="@+id/confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/grey7"
                        android:fontFamily="@font/poppins_500"
                        android:gravity="center_vertical"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:lineHeight="24dp"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="12dp"
                        android:textColor="@color/black1"
                        android:textColorHint="@color/grey2"
                        android:textSize="16sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/rule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_400"
            android:text="@string/password_rule"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone" />

        <include
            android:id="@+id/next"
            layout="@layout/main_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:name="@{@string/confirm}" />
    </LinearLayout>
</layout>