<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.main.my_courses.detail.CourseDetailsFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:overScrollMode="never"
            android:layout_height="match_parent"
            android:background="@color/fragment_background">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/fragment_background"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image_3" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/medium_500"
                    android:text="3D Design Illustration"
                    android:textColor="@color/black1"
                    android:textSize="20sp" />

                <kr.co.prnd.readmore.ReadMoreTextView
                    android:id="@+id/desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:fontFamily="@font/regular_400"
                    android:text="Hello and thank you for visiting my profile! My name is Queen. I'm a professional English Language teacher and an English Confidence And Fluency Guide. Also an experienced IELTS and TOEFL"
                    android:textColor="@color/grey1"
                    android:textSize="16sp"
                    app:readMoreColor="@color/blue"
                    app:readMoreMaxLine="2"
                    app:readMoreText="more..." />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/teacher_image"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:gravity="center_vertical"
                        android:scaleType="centerCrop"
                        android:src="@drawable/image_3"
                        app:shapeAppearanceOverlay="@style/corner_circle" />

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/teacher_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/medium_500"
                            android:text="Alimardon Aliyev"
                            android:textColor="@color/black1"
                            android:textSize="14sp" />


                        <TextView
                            android:id="@+id/teacher_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/regular_400"
                            android:text="Smm tutor"
                            android:textColor="@color/grey1"
                            android:textSize="12sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/play" />

                        <TextView
                            android:id="@+id/videos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/medium_500"
                            android:text="@string/videos"
                            android:textColor="@color/grey2"
                            android:textSize="14sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/clock" />

                        <TextView
                            android:id="@+id/hours"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/medium_500"
                            android:text="@string/time_course"
                            android:textColor="@color/grey2"
                            android:textSize="14sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/message" />

                        <TextView
                            android:id="@+id/comment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:fontFamily="@font/medium_500"
                            android:text="@string/reviews"
                            android:textColor="@color/grey2"
                            android:textSize="14sp" />

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp">


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/hat" />

                    <TextView
                        android:id="@+id/students"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="@font/medium_500"
                        android:text="@string/students_learnt"
                        android:textColor="@color/grey2"
                        android:textSize="14sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="24dp">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/videos_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardBackgroundColor="@color/blue"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp"
                        app:strokeColor="@color/blue"
                        app:strokeWidth="2dp">

                        <TextView
                            android:id="@+id/video_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginVertical="8dp"
                            android:fontFamily="@font/medium_500"
                            android:text="Videos"
                            android:textColor="@color/white"
                            android:textSize="14sp" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/reviews_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="0dp"
                        app:strokeColor="@color/grey2"
                        app:strokeWidth="2dp">

                        <TextView
                            android:id="@+id/review_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginVertical="8dp"
                            android:fontFamily="@font/medium_500"
                            android:text="Reviews"
                            android:textColor="@color/grey2"
                            android:textSize="14sp" />

                    </com.google.android.material.card.MaterialCardView>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.viewpager2.widget.ViewPager2
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_width="match_parent"
                    android:id="@+id/viewPager"
                    android:clipToPadding="false"
                    android:paddingBottom="104dp"
                    android:layout_height="match_parent" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/btn"
            layout="@layout/main_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:name="@{@string/start_course}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>